adding repository field to package

--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "browser"
   ],
   "author": "traducer",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/traducer/browserify-livereload.git"
+  },
   "license": "MIT",
   "dependencies": {
     "replacestream": "^4.0.0",
