--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   },
   "license": "MIT",
   "dependencies": {
+    "concat-stream": "^1.5.1",
+    "prepend-file": "^1.3.0",
     "replacestream": "^4.0.0",
-    "socket.io": "^1.4.6",
-    "socket.io-client": "^1.4.6"
+    "socket.io": "^1.4.6"
   },
   "devDependencies": {
     "browserify": "^13.0.1",
+    "socket.io-client": "^1.4.6",
     "standard": "^7.1.2",
     "tape": "^4.5.1"
   }
