--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "license": "MIT",
   "dependencies": {
     "concat-stream": "^1.5.1",
+    "convert-source-map": "^1.3.0",
+    "offset-sourcemap-lines": "^1.0.0",
     "prepend-file": "^1.3.0",
     "replacestream": "^4.0.0",
     "socket.io": "^1.4.6"
