--- a/example/package.json
+++ b/example/package.json
@@ -2,7 +2,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "npm run watch-js & npm run serve",
-    "watch-js": "watchify -p [ browserify-livereload --host localhost --port 1337 ] src/main.js -o src/bundle.js -v",
+    "watch-js": "watchify -d -p [ browserify-livereload --host 55.55.55.5 --port 1337 ] src/main.js -o src/bundle.js -v",
     "serve": "http-server -o"
   },
   "devDependencies": {
